[project]
name = "ring-seq-py"
version = "1.0"
authors = [
  { name="Mario Càllisto", email="mario.callisto@gmail.com" },
]
description = "Extends list, tuple and str with ring (circular) methods"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://scala-tessella.github.io/ring-seq-py/"
Issues = "https://github.com/scala-tessella/ring-seq-py/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]